# evo-mcp

./: .env.example  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-bug-report.md  02-feature-request.md
scripts/: setup_mcp.py
src/: mcp_tools.py
src/agents/: __init__.py
src/agents/mcp_agent/: __init__.py  agent.py
src/evo_mcp/: OBJECTS.md  __init__.py  context.py
src/evo_mcp/tools/: __init__.py  admin_tools.py  data_tools.py  file_tools.py  filesystem_tools.py  general_tools.py  instance_users_admin_tools.py  object_build_tools.py
src/evo_mcp/utils/: __init__.py  evo_data_utils.py  object_builders.py
templates/: cursor-http-config.json  cursor-stdio-config.json  vscode-http-config.json  vscode-stdio-config.json
