[project]
name = "evo-mcp"
version = "0.1.0"
description = "An MCP server implementation using Evo SDK"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.12.5",
    "google-adk==1.22.1",
    "evo-files>=0.2.4",
    "evo-objects>=0.3.3",
    "evo-sdk-common>=0.5.13",
    "evo-schemas>=2025.9.2",
    "aiohttp>=3.13.2",
    "pyarrow>=14.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tomli; python_version < '3.11'",
    "pyjwt>=2.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]
